<resources>
    <string name="app_name">Dikejar</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gali_idemu_raih_targetmu_belajar_bersamaku">Gali idemu Raih targetmu Belajar bersamaku</string>
    <string name="desc_perakitan">Meliputi : komponen komputer dan spesifikasi PC, alat dan bahan merakit komputer, prosedur merakit komputer CPU, pemasangan motherboard pada casing, pemasangan kartu video, pemasangan konektor ke perangkat I/O</string>
    <string name="desc_uji_kinerja">Meliputi : Pengertian beep code BIOS, jenis beep code POST BIOS dan artinya, pengecekan perangkat input, proses, output, dan media penyimpanan pada BIOS</string>
    <string name="card_materi_konfigurasi">Meliputi : Konfigurasi BIOS pada komputer dan setting BIOS.</string>
    <string name="about_eva">Mahasiswa Program Studi S1 Pendidikan Teknik Informatika, Angkatan tahun 2016, Jurusan Teknik Elektro, Fakultas Teknik, Universitas Negeri Malang.</string>
    <string name="about_app">Dikejar (Menjadi Pintar Komputer dan Jaringan Dasar) merupakan sebuah aplikasi media pembelajaran berbasis android pada mata pelajaran Komputer dan Jaringan Dasar kelas X SMK. Aplikasi ini menyediakan 3 Kompetensi Dasar yang disediakan dalam bentuk materi,ringkasan materi, video pembelajaran, dan soal evaluasi. Dengan adanya aplikasi ini diharapkan dapat meningkatkan proses berpikir dan mendorong motivasi belajar pengguna.</string>
    <string name="answers_1_1_5">e.\tInternal memory</string>
    <string name="answers_1_1_4">d.\tMain memory</string>
    <string name="answers_1_1_3">c.Random acces memory</string>
    <string name="answers_1_1_2">b.\tRead only memory</string>
    <string name="answers_1_1_1">a. Hardisk</string>
    <string name="answers_1_2_1">a.\tPrinter</string>
    <string name="answers_1_2_2">b.\tWeb cam</string>
    <string name="answers_1_2_3">c. Kamera digital</string>
    <string name="answers_1_2_4">d.\tScanner</string>
    <string name="answers_1_2_5">e.\tFlashdisk</string>
    <string name="answers_1_3_1">a.\tMagnetic disk</string>
    <string name="answers_1_3_2">b.\tMagnetic tape</string>
    <string name="answers_1_3_3">c. Main memory</string>
    <string name="answers_1_3_4">d.\tHarddisk</string>
    <string name="answers_1_3_5">e.\tFlashdisk</string>
    <string name="answers_1_4_1">a.\tMonitor, speaker, CPU, dan mouse</string>
    <string name="answers_1_4_2">b.\tMonitor, keyboard, mouse, CPU</string>
    <string name="answers_1_4_3">c. Monitor, mouse, CPU, dan scanner</string>
    <string name="answers_1_4_4">d.\tMonitor, CPU, keyboard, dan printer</string>
    <string name="answers_1_4_5">e.\tMonitor, keyboard, speaker, dan printer</string>
    <string name="answers_1_5_1">a.\tCGA</string>
    <string name="answers_1_5_2">b.\tEGA</string>
    <string name="answers_1_5_3">c.\tLCD</string>
    <string name="answers_1_5_4">d.\tVGA</string>
    <string name="answers_1_5_5">e.\tCRT</string>
    <string name="answers_1_6_1">a.\tHardware, software, dan brainware</string>
    <string name="answers_1_6_2">b.\tBrainware, hardware, software, dan processor</string>
    <string name="answers_1_6_3">c.\tBrainware, hardware, dan media penyimpanan data</string>
    <string name="answers_1_6_4">d.\tHardware, software, processor</string>
    <string name="answers_1_6_5">e.\tHardware, brainware, dan processor</string>
    <string name="answers_1_7_1">a.\tKeyboard dan mouse</string>
    <string name="answers_1_7_2">b.\tCPU dan keyboard</string>
    <string name="answers_1_7_3">c.\tMonitor dan printer</string>
    <string name="answers_1_7_4">d.\tCPU dan printer</string>
    <string name="answers_1_7_5">e.\tKeyboard dan monitor</string>
    <string name="answers_1_8_1">a. Main memory</string>
    <string name="answers_1_8_2">b.\tGeneral register</string>
    <string name="answers_1_8_3">c.\tRead only memory</string>
    <string name="answers_1_8_4">d.\tControl register</string>
    <string name="answers_1_8_5">d.\tInternal storage</string>
    <string name="answers_1_9_1">a.\tExternal storage</string>
    <string name="answers_1_9_2">b.\tGeneral register</string>
    <string name="answers_1_9_3">c.\tControl register</string>
    <string name="answers_1_9_4">d.\tInternal storage</string>
    <string name="answers_1_9_5">e.\tFree storage</string>
    <string name="answers_1_10_1">a.\tMouse</string>
    <string name="answers_1_10_2">b.\tMonitor</string>
    <string name="answers_1_10_3">c.\tPrinter</string>
    <string name="answers_1_10_4">d.\tCentral processing unit</string>
    <string name="answers_1_10_5">e. scanner</string>
    <string name="answers_2_10_1">a. DVD ROM Drive</string>
    <string name="answers_2_10_2">b. Floppy Disk Drive</string>
    <string name="answers_2_10_3">c. CPU</string>
    <string name="answers_2_10_4">d. Sound Card</string>
    <string name="answers_2_10_5">e. Mouse</string>
    <string name="answers_2_9_5">e.\tMenghidupkan tombol power di CPU</string>
    <string name="answers_2_9_4">d.\tSystem operasi</string>
    <string name="answers_2_9_3">c.\tDiagnosa POST</string>
    <string name="answers_2_9_2">b.\tBooting</string>
    <string name="answers_2_9_1">a.\tDiagnosa umum</string>
    <string name="answers_2_8_5">e.\tMacam slot VGA</string>
    <string name="answers_2_8_4">d.\tJenis BIOS</string>
    <string name="answers_2_8_3">c.\tKapasitas memory (RAM)</string>
    <string name="answers_2_8_2">b.\tKecepatan prosessor</string>
    <string name="answers_2_8_1">a.\tMengatur besar kecilnya shared memory</string>
    <string name="answers_2_7_5">e.\tRentan terkena Virus</string>
    <string name="answers_2_7_4">d.\tInstalasi Lebih Mudah</string>
    <string name="answers_2_7_3">c.\tGrafis Interface</string>
    <string name="answers_2_7_2">b.\tStruktur file dinamis</string>
    <string name="answers_2_7_1">a.\tPlug and Play</string>
    <string name="answers_2_6_5">e.\tSetup</string>
    <string name="answers_2_6_4">d.\tLog Off</string>
    <string name="answers_2_6_3">c.\tBooting</string>
    <string name="answers_2_6_2">b.\tHANK</string>
    <string name="answers_2_6_1">a.\tPOST</string>
    <string name="answers_2_5_5">e.\tBuffer</string>
    <string name="answers_2_5_4">d.\tC-MOS</string>
    <string name="answers_2_5_3">c.\tWest Bridge</string>
    <string name="answers_2_5_2">b.\tNorth Bridge</string>
    <string name="answers_2_5_1">a.\tSouth Bridge</string>
    <string name="answers_2_4_5">e.\tMouse</string>
    <string name="answers_2_4_4">d.\tJoystick</string>
    <string name="answers_2_4_3">c.\tScanner</string>
    <string name="answers_2_4_2">b.\tVGA Card</string>
    <string name="answers_2_4_1">a.\tKeyboard</string>
    <string name="answers_2_3_5">e.\tEthernet Controller</string>
    <string name="answers_2_3_4">d.\tPower Supply</string>
    <string name="answers_2_3_3">c.\tAVO meter</string>
    <string name="answers_2_3_2">b.\tUPS</string>
    <string name="answers_2_3_1">a.\tStabilizer</string>
    <string name="answers_2_2_5">e.\tCard Reader</string>
    <string name="answers_2_2_4">d.\tFloppy Drive</string>
    <string name="answers_2_2_3">c.\tHardisk</string>
    <string name="answers_2_2_2">b.\tDVD</string>
    <string name="answers_2_2_1">a.\tFlashdisk</string>
    <string name="answers_2_1_5">e.\tKain kering dan cairan pembersih</string>
    <string name="answers_2_1_4">d.\tKuas</string>
    <string name="answers_2_1_3">c.\tPalu</string>
    <string name="answers_2_1_2">b.\tTang</string>
    <string name="answers_2_1_1">a.\tObeng</string>
    <string name="answers_3_1_1">a.\tDel</string>
    <string name="answers_3_10">d.\tBIOS</string>
    <string name="answers_3_9">b.\tMelepas baterai CMOS</string>
    <string name="answers_3_8">d.\tPOST, diagnose umum, diagnose mencari dan memecahkan masalah</string>
    <string name="answers_3_7">e.\tChip BIOS</string>
    <string name="answers_3_6">d.\tPOST</string>
    <string name="answers_3_5">a.\tStandard BIOS setup</string>
    <string name="answers_3_4">e.\tSemua benar</string>
    <string name="answers_3_3">c.\tSetting screensaver</string>
    <string name="answers_3_2">b.\tBasic input output system</string>
    <string name="pratinjau_1">Peralatan / komponen pada PC meliputi unit input, unit proses, dan unit output. Merakit komputer memiliki prosedur antara komponen satu dengan lainnya.</string>
    <string name="pratinjau2">Dalam menguji hasil perakitan komputer akan dipelajari beep dan kegunaannya. Selain itu akan diidentifikasi dan diuji hardware pada komputer.</string>
    <string name="pratinjau3">Dalam sebuah BIOS terdapat sebuah chip memory (ROM/flash memory) dari bahan CMOS yang terdapat pada sebuah motherboard dengan ditambah baterai CMOS.</string>
    <string name="kp322">3.2.2 Menentukan spesifikasi komputer sesuai dengan kebutuhan pekerjaan</string>
    <string name="kp323">3.2.3 Menentukan langkah-langkah perakitan komputer sesuai standar industri</string>
    <string name="kp421">4.2.1 Menerapkan prosedur K3 perakitan komputer</string>
    <string name="kp422">4.2.2 Melakukan perakitan komputer sesuai standar industri</string>
    <string name="kp423">4.2.3 Membuat laporan perakitan komputer</string>
    <string name="kp33">3.3 Menerapkan pengujian perakitan komputer</string>
    <string name="kp242">4.2 Menguji kinerja komputer</string>
    <string name="kp331">3.3.1 Menentukan cara pengujian hasil perakitan komputer</string>
    <string name="kp332">3.3.2 Mengurutkan langkah-langkah pengujian hasil perakitan komputer</string>
    <string name="kp431">4.3.1 melakukan pengujian hasil perakitan komputer</string>
    <string name="kp432">4.3.2 Membuat laporan pengujian kinerja komputer</string>
    <string name="kp3_34">3.4 Menerapkan konfigurasi BIOS pada komputer</string>
    <string name="kp3_42">4.2 Merakit komputer</string>
    <string name="kp341">3.4.1 Menjelaskan komponen BIOS</string>
    <string name="kp342">3.4.2 Menentukan konfigurasi BIOS sesuai dengan kebutuhan</string>
    <string name="kp441">4.4.1 Melakukan konfigurasi BIOS sebagai prasyarat penginstalasian sistem operasi</string>
    <string name="kp442">4.4.2 Melakukan pengujian hasil konfigurasi BIOS</string>
    <string name="kp443">4.4.3 Membuat laporan hasil konfigurasi BIOS</string>
</resources>